text overflow fixed

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -695,16 +695,41 @@ $shade: rgba(0, 0, 0, 0.2);
 			}
 		}
 	}
-
+	#dev{
+		position: fixed;
+		top: 40px;
+		left: -30px;
+		width: 100px;
+		height: 30px;
+		transform: rotate(-90deg);
+		border-radius: 4px;
+		border-top-left-radius: 0;
+		border-top-right-radius: 0;
+		color: white;
+		background-color: #202123;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		// font-size: 1.1rem;
+		z-index: 100;
+		p{
+			margin: 0;
+			padding: 0;
+		}
+	}
 	.education {
 		position: relative;
 		height: auto;
 		padding-block: 50px;
-		padding-bottom: 100px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		z-index: 20;
+
+		@media (max-width: 700px) {
+			padding-bottom: 150px;
+		}
+
 		.container {
 			position: relative;
 			padding: 30px;
@@ -713,9 +738,9 @@ $shade: rgba(0, 0, 0, 0.2);
 			box-shadow: 0 30px 20px -15px rgba(0, 0, 0, 0.1),
 				0 0 20px rgba(0, 0, 0, 0.1) inset;
 			height: auto;
-			display: flex;
-			justify-content: center;
-			align-items: center;
+			// display: flex;
+			// justify-content: center;
+			// align-items: center;
 
 			perspective: 1000px;
 			// transform-style: preserve-3d;
@@ -725,34 +750,15 @@ $shade: rgba(0, 0, 0, 0.2);
 			@media (max-width: 700px) {
 				position: relative;
 				z-index: 0;
-				padding: 40px;
+				padding: 10px;
 				width: calc(100vw - 2rem);
 				border: none;
 				border-radius: 8px;
 				background: #f8f8f8;
 				box-shadow: none;
-				flex-direction: column;
-				&::before{
-					content: "jitu.dev";
-					position: absolute;
-					top: -29px;
-					left: 10px;
-					width: 100px;
-					height: 30px;
-					border-radius: 4px;
-					border-bottom-left-radius: 0;
-					border-bottom-right-radius: 0;
-					color: white;
-					background-color: #353232;
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					font-size: 1.1rem;
-					z-index: -1;
-				}
+				
 
 			}
-
 			h2 {
 				// font-size: 3rem;
 				@media (max-width: 700px) {
@@ -812,6 +818,7 @@ $shade: rgba(0, 0, 0, 0.2);
 				flex-direction: row-reverse;
 				
 				p {
+					position: relative;
 					flex: 1;
 					display: inline-block;
 					font-family: 'Nunito', sans-serif;
@@ -845,7 +852,7 @@ $shade: rgba(0, 0, 0, 0.2);
 						.photo-back{
 							background-size: cover;
 							background-position: center;
-							min-height: 475px;
+							min-height: 375px;
 							transition: transform 0.7s cubic-bezier(.4,.2,.2,1);
 							backface-visibility: hidden;
 							transform-style: preserve-3d;
@@ -938,13 +945,16 @@ $shade: rgba(0, 0, 0, 0.2);
 					font-size: 1rem;
 				}
 				ul{
+					position: relative;
 					list-style: none;
 					padding: 0;
 					display: grid;
 					grid-template-columns: repeat( auto-fit, minmax(350px, 1fr) );
 					grid-gap: 0 10px;
 					li{	
+						position: relative;
 						width: 350px;
+						max-width: 100%;
 						margin: 1rem auto;
 						padding: 16px 40px;
 						border-radius: 12px;
@@ -968,7 +978,6 @@ $shade: rgba(0, 0, 0, 0.2);
 						@media (max-width: 700px){
 							border-radius: 4px;
 							padding: 10px 30px;
-							width: calc(100% - 2rem);
 							border: 1px solid white;
 							box-shadow: 0 10px 16px rgba(0, 0, 0, 0.3);
 						}
@@ -996,6 +1005,9 @@ $shade: rgba(0, 0, 0, 0.2);
 								}
 							}
 						}
+					}
+					@media (max-width: 700px){
+						display: block;
 					}
 				}
 			}
